Kubernetes/110-statefulset-connect.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: connect-statefulset
spec:
  selector:
    matchLabels:
      app: connect
  replicas: 1
  serviceName: connect-service
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
      - name: connect-container
        image: confluentinc/cp-kafka-connect:5.4.1
        ports:
        - containerPort: 8083
          name: connect-port
        resources:
          requests:
            memory: "300M"
            cpu: "50m"
          limits:
            memory: "2G"
            cpu: "2000m"
        livenessProbe:
          httpGet:
            path: /
            port: connect-port
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: connect-port
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 300
          timeoutSeconds: 10
        volumeMounts:
        - name: connect-volume
          mountPath: /plugins
      volumes:
      - name: connect-volume
        persistentVolumeClaim:
          claimName: connect-claim
