Kubernetes/120-statefulset-flink.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flink-statefulset
spec:
  selector:
    matchLabels:
      app: flink
  replicas: 1
  serviceName: flink-service
  template:
    metadata:
      labels:
        app: flink
    spec:
      containers:
      - name: flink-jobmanager-container
        image: apache/flink:1.14.0-scala_2.11-java8
        args: ["jobmanager"]
        ports:
        - containerPort: 6123
          name: rpc
        - containerPort: 6124
          name: blob-server
        - containerPort: 8081
          name: webui
        livenessProbe:
          tcpSocket:
            port: 6123
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
        - name: flink-config-volume
          mountPath: /opt/flink/conf
        - name: flink-libraries-volume
          mountPath: /opt/flink/lib
        - name: flink-myjars-volume
          mountPath: /myjars
        - name: flink-savepoints-volume
          mountPath: /savepoints
        securityContext:
          runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
        resources:
          requests:
            memory: "1024M"
            cpu: "100m"
          limits:
            memory: "3G"
            cpu: "2000m"
      - name: flink-taskmanager-container
        image: apache/flink:1.14.0-scala_2.11-java8
        args: ["taskmanager"]
        ports:
        - containerPort: 6122
          name: rpc
        - containerPort: 6125
          name: query-state
        livenessProbe:
          tcpSocket:
            port: 6122
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
        - name: flink-config-volume
          mountPath: /opt/flink/conf/
        - name: flink-libraries-volume
          mountPath: /opt/flink/lib
        - name: flink-myjars-volume
          mountPath: /myjars
        - name: flink-savepoints-volume
          mountPath: /savepoints
        securityContext:
          runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
        resources:
          requests:
            memory: "1024M"
            cpu: "200m"
          limits:
            memory: "3G"
            cpu: "2000m"
      volumes:
      - name: flink-config-volume
        configMap:
          name: flink-configmap
          items:
          - key: flink-conf.yaml
            path: flink-conf.yaml
          - key: log4j-console.properties
            path: log4j-console.properties
      - name: flink-libraries-volume
        persistentVolumeClaim:
          claimName: flink-libraries-claim
      - name: flink-myjars-volume
        persistentVolumeClaim:
          claimName: flink-myjars-claim
      - name: flink-savepoints-volume
        persistentVolumeClaim:
          claimName: flink-savepoints-claim
