Kubernetes/30-statefulset-mysql.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  serviceName: mysql-service
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0.25
        ports:
        - containerPort: 3306
          name: mysql-port
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: "300M"
            cpu: "100m"
          limits:
            memory: "3G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: 
             - bash 
             - "-c" 
             - |
               mysql -h 127.0.0.1 -e "SELECT 1" -p${MYSQL_ROOT_PASSWORD}
#            command: ["mysql", "-h", "127.0.0.1", "-e", "exit","-u","$(MYSQL_USER)","-pwelcome1"]
#            command: 
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-claim
