Kubernetes/40-statefulset-redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  serviceName: redis-service
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-container
        image: redis:5.0.8-alpine
        ports:
        - containerPort: 6379
          name: redis-port
        volumeMounts:
        - name: redis-volume
          mountPath: /data
        resources:
          requests:
            memory: "300M"
            cpu: "100m"
          limits:
            memory: "3G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
      volumes:
      - name: redis-volume
        persistentVolumeClaim:
          claimName: redis-claim
