Kubernetes/50-statefulset-cassandra.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra-statefulset
spec:
  selector:
    matchLabels:
      app: cassandra
  replicas: 1
  serviceName: cassandra-service
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra-container
        image: cassandra:4.0.4
        ports:
        - containerPort: 9042
          name: cassandra-port
        volumeMounts:
        - name: cassandra-volume
          mountPath: /var/lib/cassandra
        resources:
          requests:
            memory: "300M"
            cpu: "100m"
          limits:
            memory: "3G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command: 
             - bash 
             - "-ec" 
             - |
               nodetool status | grep -E "^UN\\s+${POD_IP}"
          initialDelaySeconds: 60
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: 
             - bash 
             - "-ec" 
             - |
               nodetool status | grep -E "^UN\\s+${POD_IP}"
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
      volumes:
      - name: cassandra-volume
        persistentVolumeClaim:
          claimName: cassandra-claim
