Kubernetes/60-statefulset-elastic.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-statefulset
spec:
  selector:
    matchLabels:
      app: elastic
  replicas: 1
  serviceName: elastic-service
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
      - name: elastic-container
        image: elasticsearch:7.17.3
        ports:
        - containerPort: 9200
          name: elastic-port
        volumeMounts:
        - name: elastic-volume
          mountPath: /usr/share/elasticsearch/data
        resources:
          requests:
            memory: "300M"
            cpu: "100m"
          limits:
            memory: "3G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command: 
              - sh
              - -c
              - |
                curl -XGET -s -k --fail http://127.0.0.1:9200/_cluster/health | egrep -o "status[^,]*" | egrep "yellow|green"
          initialDelaySeconds: 60
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: 
              - sh
              - -c
              - |
                curl -XGET -s -k --fail http://127.0.0.1:9200/_cluster/health | egrep -o "status[^,]*" | egrep "yellow|green"
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
      volumes:
      - name: elastic-volume
        persistentVolumeClaim:
          claimName: elastic-claim
