Kubernetes/70-statefulset-kibana.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kibana-statefulset
spec:
  selector:
    matchLabels:
      app: kibana
  replicas: 1
  serviceName: kibana-service
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana-container
        image: kibana:7.17.3
        ports:
        - containerPort: 5601
          name: kibana-port
        resources:
          requests:
            memory: "300M"
            cpu: "50m"
          limits:
            memory: "2G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command:
             - bash
             - "-c"
             - |
               curl http://localhost:5601/kib/api/status |  egrep -o "state[^,]*" | head -1 | egrep "green|yellow"
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          httpGet: 
            path: /kib/api/status
            port: 5601
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
