Kubernetes/80-statefulset-zookeeper.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-statefulset
spec:
  selector:
    matchLabels:
      app: zookeeper
  replicas: 1
  serviceName: zookeeper-service
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper-container
        image: confluentinc/cp-zookeeper:5.4.1
        ports:
        - containerPort: 2181
          name: zookeeper-port
        resources:
          requests:
            memory: "300M"
            cpu: "100m"
          limits:
            memory: "2G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command: ['/bin/bash', '-c', 'echo "ruok" | nc -w 2 localhost 2181 | grep imok']
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ['/bin/bash', '-c', 'echo "ruok" | nc -w 2 localhost 2181 | grep imok']
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
        volumeMounts:
        - name: zookeeper-volume
          mountPath: /var/lib/zookeeper/data
      volumes:
      - name: zookeeper-volume
        persistentVolumeClaim:
          claimName: zookeeper-claim
