Kubernetes/90-statefulset-kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-statefulset
spec:
  selector:
    matchLabels:
      app: kafka
  replicas: 1
  serviceName: kafka-service
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka-container
        image: confluentinc/cp-kafka:5.4.1
        ports:
        - containerPort: 9092
          name: kafka-port-out
        - containerPort: 29092
          name: kafka-port-in
        resources:
          requests:
            memory: "300M"
            cpu: "100m"
          limits:
            memory: "2G"
            cpu: "2000m"
        livenessProbe:
          exec:
            command: ['/bin/bash', '-c', 'kafka-consumer-groups --list --bootstrap-server localhost:9092 | head -1']
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ['/bin/bash', '-c', 'kafka-consumer-groups --list --bootstrap-server localhost:9092 | head -1']
          initialDelaySeconds: 30
          periodSeconds: 300
          timeoutSeconds: 10
        volumeMounts:
        - name: kafka-volume
          mountPath: /var/lib/kafka
      volumes:
      - name: kafka-volume
        persistentVolumeClaim:
          claimName: kafka-claim
