Kubernetes/100-service-schemareg.yml
apiVersion: v1
kind: Service
metadata:
  name: schemareg-service
spec:
  clusterIP: None
  ports:
  - port: 8081
    targetPort: 8081
    name: schemareg-port
  selector:
    app: schemareg
