Kubernetes/120-service-flink.yml
apiVersion: v1
kind: Service
metadata:
  name: flink-service
  labels:
    service: flink
spec:
  clusterIP: None
  ports:
  - port: 8081
    name: webui
  selector:
    app: flink
