Kubernetes/30-service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    service: mysql
spec:
  clusterIP: None
  ports:
  - port: 3306
    name: mysql-port
  selector:
    app: mysql
