Kubernetes/40-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    service: redis
spec:
  clusterIP: None
  ports:
  - port: 6379
    name: redis-port
  selector:
    app: redis
