Kubernetes/50-service-cassandra.yml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-service
  labels:
    service: cassandra
spec:
  clusterIP: None
  ports:
  - port: 9042
    name: cassandra-port
  selector:
    app: cassandra
