Kubernetes/70-service-kibana.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: ClusterIP
  ports:
  - port: 5601
    targetPort: 5601
    name: kibana-port
  selector:
    app: kibana
