Kubernetes/80-service-zookeeper.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  clusterIP: None
  ports:
  - port: 2181
    targetPort: 2181
    name: zookeeper-port
  selector:
    app: zookeeper
