Kubernetes/1000-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /kib
        pathType: Prefix
        backend:
          service:
            name: kibana-service
            port:
              number: 5601
